syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/Iowel/app-auth-service/pkg/pb";

message User {
    int64 id = 1;
    string name = 2;
    string email = 3;
    string password = 4;
    bool isemailverified = 5;
    string avatar = 6;
    string role = 7;
    google.protobuf.Timestamp created_at = 8;
    google.protobuf.Timestamp updated_at = 9;
}